name:           OpenCLWrappers
version:        0.0.1.1
cabal-version:  >=1.2
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      Renaissance Computing Institute, Emil Karlson
maintainer:     Alex Mason <axman6@gmail.com>
stability:      Experimental
homepage:       https://github.com/axman6/OpenCLWrappers
package-url:
bug-reports:    https://github.com/axman6/OpenCLWrappers/issues
synopsis:       The OpenCL Standard for heterogenous data-parallel computing
description:    Light opencl wrappers, a fork of the OpenCLRaw package.
category:       FFI
author:         J.R. Heard, Emil Karlson, Alex Mason

Library
  exposed-modules: System.OpenCL.Wrappers.CommandQueue
                   System.OpenCL.Wrappers.Context
                   System.OpenCL.Wrappers.DeviceInfo
                   System.OpenCL.Wrappers.Errors
                   System.OpenCL.Wrappers.Etc
                   System.OpenCL.Wrappers.EventObject
                   System.OpenCL.Wrappers.FlushFinish
                   System.OpenCL.Wrappers.Kernel
                   System.OpenCL.Wrappers.MemoryObject
                   System.OpenCL.Wrappers.OutOfOrder
                   System.OpenCL.Wrappers.PlatformInfo
                   System.OpenCL.Wrappers.ProgramObject
                   System.OpenCL.Wrappers.Sampler
                   System.OpenCL.Wrappers.Types
                   System.OpenCL.Wrappers.Helpers
                   System.OpenCL.Wrappers.Raw
                   System.OpenCL.Wrappers
                   System.OpenCL.Monad.CommandQueue
                   System.OpenCL.Monad.Context
                   System.OpenCL.Monad.DeviceInfo
                   System.OpenCL.Monad.Errors
                   System.OpenCL.Monad.Etc
                   System.OpenCL.Monad.EventObject
                   System.OpenCL.Monad.FlushFinish
                   System.OpenCL.Monad.Kernel
                   System.OpenCL.Monad.MemoryObject
                   System.OpenCL.Monad.OutOfOrder
                   System.OpenCL.Monad.PlatformInfo
                   System.OpenCL.Monad.ProgramObject
                   System.OpenCL.Monad.Sampler
                   System.OpenCL.Monad.Types
                   System.OpenCL.Monad.Helpers
                   System.OpenCL.Monad
  build-depends: base < 4.5,
                 bytestring -any,
                 mtl >= 2 && < 2.1
  exposed: True
  buildable: True
  hs-source-dirs: .
  other-modules: System.OpenCL.Wrappers.Utils

